--- a/ohg-examples.tex
+++ b/ohg-examples.tex
@@ -96,4 +96,25 @@ internal: acc, external: nom
 
 
 
+ enti	gachaufta	den	Auh	ist	galiih	himilo	rihhi	seginun	in	seu	gasezziteru
+ und	kaufenIND.PAST.SG.3		derMASC.SG.ACC		auch	seinIND.PRES.SG.3	gleich	HimmelPOS.PL.GEN	ReichSG.NOM		NetzSG.DAT		in	SeeSG.ACC		setzenP.POS.FEM.SG.DAT.ST
+
+
 \phantom{x}
+
+\section{Tatian}
+
+light-headed relative
+
+\exg. eno	nist	thiz	thér	then	ir	suochet	zi	arslahanne	?\\
+ etwa, nun; wohl; nicht wahr	nicht	sein	dieser, diese, dieses	der, die, das	der, die, das, wer, was	ihr	suchen	zu	erschlagen, töten\\
+ `'
+
+
+
+
+ Themo	min	uuirdit	forlazan	,	min	minnot
+ dieser, der(selbe); diese, die; dieses, das; wer, welcher; welche; was, welches	weniger, minder	werden	erlassen, vergeben, erlauben		weniger, minder	(eifersüchtig) lieben, schätzen
+ MASC.SG.DAT		IND.PRES.SG.3				IND.PRES.SG.3
+
+ Aan wie minder wordt voorgelezen, heeft minder lief.
