--- a/variation.tex
+++ b/variation.tex
@@ -2,7 +2,10 @@
 
 \chapter{The variation}
 
-I showed that headless relatives crosslinguistically make reference to the case scale. There is another aspect to headless relatives, however, which is not stable crosslinguistically. This is has to do with whether the case winning case in the competition is the internal or the external case.
+I showed that headless relatives crosslinguistically make reference to the case scale: if two cases are in competition, it is always the same that wins.
+However, there is a second aspect to headless relatives, which differs across languages. That is, sometimes the case competition does not even take place, or rather, there is no winner to the competition. I show that whether is not the case competition takes place depends on the type of relative pronoun that is used. I distinguish two types of relative pronouns: \tsc{wh}-pronouns and \tsc{d}-pronouns.
+
+When the relative pronoun is a \tsc{wh}-pronoun, only the internal case can win. When the relative pronoun is a \tsc{d}-pronoun, both the internal and the external case can win.
 
 %then have a particular order with the variation
 
@@ -259,8 +262,7 @@ Examples in which the internal case is nominative, the external case is accusati
 
 
 
-enti	gachaufta	den	Auh	ist	galiih	himilo	rihhi	seginun	in	seu	gasezziteru
-und	kaufenIND.PAST.SG.3		derMASC.SG.ACC		auch	seinIND.PRES.SG.3	gleich	HimmelPOS.PL.GEN	ReichSG.NOM		NetzSG.DAT		in	SeeSG.ACC		setzenP.POS.FEM.SG.DAT.ST
+
 
 
 
@@ -330,3 +332,7 @@ und	kaufenIND.PAST.SG.3		derMASC.SG.ACC		auch	seinIND.PRES.SG.3	gleich	HimmelPOS
  % 18
  % they occur in opposition to the Greek. Evidence of the first type is
  % found in Mk 10:32, Luk 3:13, Rom 14:19, II Cor 8:11, Col 3:2, and elsewhere.
+
+Old English, Old Icelandic both show: \tsc{d}-pronoun plus invariant relativizer + always take case from the main clause
+
+Polish and Italian have \tsc{wh}-pronouns but do not allow for conflicts
